tests/ui/map_missing_serialize.stderr
error[E0277]: the trait bound `CustomKeyType: serde::ser::Serialize` is not satisfied
 --> tests/ui/map_missing_serialize.rs:9:5
  |
9 |     #[dbstruct::dbstruct(db=sled)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `CustomKeyType`
  |
  = help: the following other types implement trait `serde::ser::Serialize`:
            &'a T
            &'a mut T
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
          and $N others
note: required by a bound in `dbstruct::wrapper::Map`
 --> src/wrapper/map.rs
  |
  | pub struct Map<'a, Key, Value, DS>
  |            --- required by a bound in this struct
  | where
  |     Key: Serialize,
  |          ^^^^^^^^^ required by this bound in `Map`
  = note: this error originates in the attribute macro `dbstruct::dbstruct` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CustomValType: serde::ser::Serialize` is not satisfied
 --> tests/ui/map_missing_serialize.rs:9:5
  |
9 |     #[dbstruct::dbstruct(db=sled)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `CustomValType`
  |
  = help: the following other types implement trait `serde::ser::Serialize`:
            &'a T
            &'a mut T
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
          and $N others
note: required by a bound in `dbstruct::wrapper::Map`
 --> src/wrapper/map.rs
  |
  | pub struct Map<'a, Key, Value, DS>
  |            --- required by a bound in this struct
...
  |     Value: Serialize + DeserializeOwned,
  |            ^^^^^^^^^ required by this bound in `Map`
  = note: this error originates in the attribute macro `dbstruct::dbstruct` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `for<'de> CustomValType: serde::de::Deserialize<'de>` is not satisfied
 --> tests/ui/map_missing_serialize.rs:9:5
  |
9 |     #[dbstruct::dbstruct(db=sled)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `CustomValType`
  |
  = help: the following other types implement trait `serde::de::Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = note: required for `CustomValType` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dbstruct::wrapper::Map`
 --> src/wrapper/map.rs
  |
  | pub struct Map<'a, Key, Value, DS>
  |            --- required by a bound in this struct
...
  |     Value: Serialize + DeserializeOwned,
  |                        ^^^^^^^^^^^^^^^^ required by this bound in `Map`
  = note: this error originates in the attribute macro `dbstruct::dbstruct` (in Nightly builds, run with -Z macro-backtrace for more info)
